# bandit-backend

./: .dockerignore  .env.master.k8s.dev  .env.master.k8s.prod  .env.master.local.dev  .env.master.local.prod  .env.slave.k8s.dev  .env.slave.k8s.prod  .env.slave.local.dev  .env.slave.local.prod  .gitignore  Dockerfile  Makefile  README.md  logging.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
annotations/: __init__.py
backends/grpc/interceptors/: __init__.py  debug.py  metrics.py  ttl.py  welcome.py
backends/grpc/servers/: __init__.py
backends/grpc/servicers/: __init__.py
backends/grpc/servicers/master/: __init__.py
backends/grpc/servicers/slave/: __init__.py
caches/: __init__.py
clients/: __init__.py  configs.py
clients/grpc/: __init__.py  shared.py
clients/grpc/bandit/: __init__.py
clients/http/: __init__.py
clients/kafka/: __init__.py  configs.py  json.py  shared.py
clients/kafka/item/: __init__.py  json.py
clients/kafka/shared/: __init__.py
clients/kafka/trace/: __init__.py  json.py
configs/: __init__.py
connectors/: __init__.py
container/: __init__.py
directories/: __init__.py
examples/: drawing_distribution.py  performance.py  pulling_time.py  reward.py
helms/bandit-backend/: Chart.yaml  values.dev.yaml  values.prod.yaml
helms/bandit-backend/charts/master/: values.yaml
helms/bandit-backend/charts/master/configs/: .env.k8s.dev  .env.k8s.prod
helms/bandit-backend/charts/master/templates/: config-map.yaml  deployment.yaml  ingress.yaml  pod-monitor.yaml  service.yaml
helms/bandit-backend/charts/slave/: Chart.yaml  values.yaml
helms/bandit-backend/charts/slave/configs/: .env.k8s.dev  .env.k8s.prod
helms/bandit-backend/charts/slave/templates/: NOTES.txt  _helpers.tpl  config-map.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pod-monitor.yaml  service.yaml  serviceaccount.yaml
helms/bandit-backend/templates/: NOTES.txt
loggers/: __init__.py
mab/: __init__.py  abstracts.py  context.py  thomson.py
observable/: __init__.py
protos/: bandit.proto  bandit_pb2.py  bandit_pb2_grpc.py
runnable/: __init__.py
schedulers/: __init__.py  master.py  slave.py
streamable/: __init__.py
tools/: __init__.py
unittests/: conftest.py
unittests/bandits/: test_thompson_bandit.py  test_thompson_multi_armed_bandit.py
unittests/caches/: test_ttl.py
unittests/connectors/: connectors.py
unittests/fixtures/: __init__.py
unittests/grpc/: conftest.py  test_master_bandit.py  test_slave_bandit.py
unittests/observable/: test_observable.py
(+1 files in other folders)
