[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | protos
)/
'''

[tool.poetry]
name = "bandit-backend"
version = "0.1.1"
description = ""
authors = ["nelly <dldyddn0624@gmail.com>"]
readme = "README.md"
packages = [{include = "bandit_backend"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
cachetools = "^5.3.1"
apscheduler = "^3.10.4"
llist = "^0.7.1"
aiokafka = "^0.8.1"
confluent-kafka = "^2.2.0"
avro-python3 = "^1.10.2"
fastavro = "^1.8.3"
fastapi = "^0.103.2"
starlette-context = "^0.3.6"
dependency-injector = "^4.41.0"
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"
grpcio-health-checking = "^1.59.0"
grpcio-reflection = "^1.59.0"
prometheus-client = "^0.17.1"
prometheus-fastapi-instrumentator = "^6.1.0"
sentry-sdk = "^1.31.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
moto = "^4.2.5"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
models = { git = "https://github.com/anuscode/models.git", branch="master" }
clients = { git = "https://github.com/anuscode/clients.git", branch="master" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
